--- a/static/css/main.css
+++ b/static/css/main.css
@@ -68,3 +68,29 @@ h1,
 h2 {
   color: rgb(40, 40, 40);
 }
+
+footer {
+  border-top: 1px solid rgba(90, 90, 90, 0.5);
+  padding-top: 0.25rem;
+}
+
+footer p {
+  align-items: center;
+  color: rgb(90, 90, 90);
+  display: flex;
+  font-size: 0.875rem;
+  justify-content: center;
+  margin: 0 auto;
+  width: 90vw;
+}
+
+footer a {
+  color: inherit;
+  margin: 0 0.25rem;
+  padding: 0.5rem 0.25rem;
+}
+
+footer .btn {
+  margin-top: 0.25rem;
+  padding: 0;
+}
